# sir

./: CMakeLists.txt  LICENSE  README.md
include/: CMakelists.txt
include/SIR/: CMakelists.txt  SIRDialect.h  SIRDialect.td  SIROps.h  SIROps.td  SIRTypes.h  SIRTypes.td
include/SparkIR/: CMakelists.txt  SparkIRDialect.h  SparkIRDialect.td  SparkIROps.h  SparkIROps.td  SparkIRTypes.h  SparkIRTypes.td
lib/: CMakelists.txt
lib/SIR/: CMakelists.txt  SIRDialect.cpp  SIROps.cpp  SIRTypes.cpp
lib/SparkIR/: CMakelists.txt  SparkIRDialect.cpp  SparkIROps.cpp  SparkIRTypes.cpp
test/: CMakelists.txt  lit.cfg.py  lit.site.cfg.py.in
test/SIR/: foo.mlir
test/SparkIR/: foo.mlir
tools/: CMakelists.txt  sir-opt.cpp  spark-ir-opt.cpp
